# career-mode-live

./: .gitignore  CLAUDE.md  DEMO-SCRIPT.md  HACKATHON-STATUS.md  README.md  architecture.md  docker-compose.yml  run.sh
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: coaching_panel.py  gemini_service.py  personas.py  resume_parser.py  skill_analyzer.py  whiteboard_service.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/test/: page.tsx
frontend/src/app/whiteboard/: page.tsx
frontend/src/app/whiteboard-test/: page.tsx
frontend/src/components/: ai-drawing-layer.tsx  career-trailer.tsx  character-sheet-mini.tsx  coaching-panel.tsx  draw-canvas.tsx  drawing-toolbar.tsx  live-session-overlay.tsx  onboarding.tsx  story-whiteboard.tsx
frontend/src/hooks/: use-auto-tts.ts  use-coaching-live.ts  use-gemini-live.ts  use-voice.ts
frontend/src/lib/: api.ts
frontend/src/stores/: canvas-store.ts  character-store.ts
